--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,4 +4,7 @@
     <style name="Theme.FreeLocationProviderTestBench" parent="android:Theme.Material.Light.NoActionBar">
         <item name="android:statusBarColor">@color/purple_700</item>
     </style>
+    <style name="Theme.FreeLocationProviderTestBench.Nav" parent="Theme.AppCompat.DayNight.NoActionBar">
+
+</style>
 </resources>
